Fixed issue with odd wrapping in footer.

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -18,6 +18,7 @@
 				left: 50%;
 				height: 45px;
 				transform: translate(-50%);
+				white-space: nowrap;
 			}
 
 			> li {
